signoz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz-ingress
  namespace: observability
spec:
  ingressClassName: traefik
  rules:
    - host: signoz.k3d.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signoz
                port:
                  number: 8080
